# upnp-tools

./: .gitignore  .gitmodules  LICENSE  Makefile.am  README.md  build.sh  config.h.in  configure.ac  dump.txt  run.sh  upnp-tools.pc.in
doc/: modules
examples/: Makefile.am  ServiceFindTest.cpp  controller.cpp  cp-dev.cpp  cp.cpp  deviceDescriptionTest.cpp  deviceMaker.cpp  dial-discover.cpp  dial-server.cpp  dialTest.cpp  discovery.cpp  eventTest.cpp  main.cpp  msearch.cpp  msearchTest.cpp  server.cpp  socketTest.cpp  ssdp-discover.cpp  ssdp-server.cpp  ssdpServerTest.cpp  ssdpTest.cpp  test-tool.cpp  timerTest.cpp  tui-controller.cpp  upnpServer.cpp  uuidTest.cpp  xmlTest.cpp  yacp.cpp
examples/data/: dial.xml  dimming-light.xml  dimming.xml
examples/res/: Makefile.am  sample_cd_scpd.xml  sample_cm_scpd.xml  sample_device.xml
libupnp-tools/: AnotherSSDPServer.cpp  AnotherSSDPServer.hpp  CacheControl.cpp  CacheControl.hpp  HttpUtils.cpp  HttpUtils.hpp  Makefile.am  NetworkStateManager.cpp  NetworkStateManager.hpp  NetworkUtil.cpp  NetworkUtil.hpp  SSDP.cpp  SSDP.hpp  SSDPEventHandler.hpp  SSDPEventListener.hpp  SSDPHeader.cpp  SSDPHeader.hpp  SSDPMsearchSender.cpp  SSDPMsearchSender.hpp  SSDPMulticastListener.cpp  SSDPMulticastListener.hpp  SSDPMulticastSender.cpp  SSDPMulticastSender.hpp  SSDPPacketHandler.hpp  SSDPServer.cpp  SSDPServer.hpp  SharedUPnPDeviceList.cpp  SharedUPnPDeviceList.hpp  SoapReader.cpp  SoapReader.hpp  SoapWriter.cpp  SoapWriter.hpp  StringReader.cpp  StringReader.hpp  Timer.cpp  Timer.hpp  UPnP.hpp  UPnPAction.cpp  UPnPAction.hpp  UPnPActionArgument.cpp  (+117 more)
src/: Makefile.am  SSDPServer.cpp  SSDPServer.hpp  UPnPDevice.hpp  UPnPService.hpp  main.cpp  os.cpp  os.hpp
tests/: Makefile.am  test-basic.cpp  test-cache.cpp  test-control-point.cpp  test-device-profile-builder.cpp  test-etc.cpp  test-location-resolver.cpp  test-network.cpp  test-notification.cpp  test-resource-manager.cpp  test-serialize.cpp  test-server.cpp  test-ssdp.cpp  test-uuid.cpp
tests/data/: cd.xml  cm.xml  dms.xml
win32/: upnp-tools.sln  upnp-tools.vcxproj  upnp-tools.vcxproj.filters
win32/sample/: main.cpp  sample.vcxproj  sample.vcxproj.filters
win32/sample/res/: sample_device.xml
xcode/upnp-tools-console/upnp-tools-console.xcodeproj/: project.pbxproj
xcode/upnp-tools-console/upnp-tools-console.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xcode/upnp-tools-sample/UPnPToolsOSX/: AppDelegate.h  AppDelegate.m  Info.plist  main.m
xcode/upnp-tools-sample/UPnPToolsOSX/Base.lproj/: MainMenu.xib
xcode/upnp-tools-sample/UPnPToolsOSXTests/: UPnPToolsOSXTests.m
xcode/upnp-tools-sample/UPnPToolsOSXUITests/: UPnPToolsOSXUITests.m
xcode/upnp-tools-sample/upnp-tools-sample/: main.mm
xcode/upnp-tools-sample/upnp-tools-sample.xcodeproj/: project.pbxproj
xcode/upnp-tools-sample/upnp-tools-sample.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xcode/upnp-tools/upnp-tools/: upnp_tools.h  upnp_tools.m  upnp_tools.mm
xcode/upnp-tools/upnp-tools.xcodeproj/: project.pbxproj
xcode/upnp-tools/upnp-tools.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
